# aivpn

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.prebuilt  Dockerfile.windows-client  Makefile  README.md  README_CN.md  README_RU.md  THREAT_MODEL.md  THREAT_MODEL_CN.md  THREAT_MODEL_RU.md  build-client-arm64.sh  build-linux-appimage.sh  build-musl-release.sh  build-windows-gui.sh  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  server-release-asset.yml
aivpn-android/: build-rust-android.sh
aivpn-android-core/: Cargo.toml
aivpn-android-core/src/: android_tunnel.rs  lib.rs
aivpn-android/app/: build.gradle
aivpn-client/: Cargo.toml
aivpn-client/src/: adaptive.rs  bench.rs  bootstrap_cache.rs  bootstrap_loader.rs  client.rs  dns_proxy.rs  kill_switch.rs  lib.rs  main.rs  mimicry.rs  record_cmd.rs  tunnel.rs
aivpn-client/src/proxy/: device.rs  mod.rs  socks5.rs
aivpn-common/: Cargo.toml
aivpn-common/mask-assets/: quic_https_v2.json  sber_salute_v1.json  telegram_mtproto_v1.json  vk_video_v1.json  webrtc_zoom_v3.json  yandex_alice_v1.json
aivpn-common/src/: client_wire.rs  crypto.rs  event_log.rs  fec.rs  kernel_accel.rs  lib.rs  mask.rs  mimicry.rs  network_config.rs  protocol.rs  quality.rs  upload_pipeline.rs
aivpn-common/tests/: battle_tests.rs
aivpn-ios/: project.yml
aivpn-ios-core/: Cargo.toml
aivpn-ios-core/include/: aivpn_core.h
aivpn-ios-core/src/: ios_tunnel.rs  lib.rs
aivpn-ios/App/: Aivpn.entitlements  AivpnApp.swift  ConnectionKey.swift  ContentView.swift  Info.plist  LocalizationManager.swift  SplitTunnelView.swift  VPNManager.swift
aivpn-ios/Tunnel/: AivpnCoreBridge.h  AivpnTunnel.entitlements  Info.plist  PacketTunnelProvider.swift
aivpn-linux/: Cargo.toml
aivpn-linux-kernel/: DESIGN.md  Makefile  dkms.conf
aivpn-linux-kernel/scripts/: uninstall-dkms.sh
aivpn-linux-kernel/src/: crypto_ops.c  crypto_ops.h  dev.rs  helpers.h  main.rs  session_table.c  session_table.h  tun_inject.c  tun_inject.h  udp_hook.c  udp_hook.h  xdp_prog.c
aivpn-linux-kernel/tests/: user_ioctl_test.c
aivpn-linux/src/: app.rs  vpn_manager.rs
aivpn-macos/: AivpnApp.swift  AppIcon.icns  ConnectionKey.swift  ContentView.swift  Info.plist  LocalizationManager.swift  VPNManager.swift  generate_icon.py
aivpn-macos/aivpn-helper/: main.swift
aivpn-mikrotik/: Dockerfile  README.md  README_CN.md  README_RU.md  build-mikrotik.sh  entrypoint.sh
aivpn-openwrt/luci-app-aivpn/: Makefile
aivpn-server/: Cargo.toml
aivpn-server/src/: audit_log.rs  backup.rs  chain_forwarder.rs  client_db.rs  dns_proxy.rs  ebpf_observer.rs  gateway.rs  key_rotation.rs  lib.rs  main.rs  management_api.rs  mask_gen.rs  metrics.rs  mtls.rs  nat.rs  neural.rs  passive_distribution.rs  pool_sync.rs  qos.rs  recording.rs  server.rs  session.rs  site_sync.rs  tc_loader.rs
aivpn-server/tests/: battle_tests.rs  management_api_tests.rs
aivpn-windows/: Cargo.toml  build.rs
aivpn-windows/assets/: generate_icon.py
aivpn-windows/installer/: install.cmd
aivpn-windows/src/: key_storage.rs  localization.rs  main.rs  tray.rs  ui.rs  vpn_manager.rs
assets/brand/: BRANDBOOK.md
assets/masks/: avito_api_v1.json  quic_https_v2.json  sber_salute_v1.json  telegram_mtproto_v1.json  vk_video_v1.json  webrtc_sberjazz_v1.json  webrtc_vk_teams_v1.json  webrtc_yandex_telemost_v1.json  webrtc_zoom_v3.json  whatsapp_voip_v1.json  yandex_alice_v1.json
config/: server.json.example
crates/aivpn-android-core/: Cargo.toml
crates/aivpn-android-core/src/: android_tunnel.rs  lib.rs
crates/aivpn-client/: Cargo.toml  build.rs
crates/aivpn-client/src/: adaptive.rs  bootstrap_cache.rs  bootstrap_loader.rs  client.rs  dns_proxy.rs  kill_switch.rs  lib.rs  main.rs  mask_catalog.rs  mask_feedback_log.rs  record_cmd.rs  server_pool.rs  tunnel.rs
crates/aivpn-client/src/proxy/: device.rs  mod.rs  socks5.rs
crates/aivpn-client/tests/: handshake_wire_roundtrip.rs  mask_feedback_log_loop.rs
crates/aivpn-common/: Cargo.toml
crates/aivpn-common/src/: client_wire.rs  crypto.rs  dpi_gate.rs  error.rs  fec.rs  kernel_accel.rs  lib.rs  mask.rs  mimic_protocol.rs  mimicry.rs  network_config.rs  protocol.rs  quic_initial.rs  recording.rs  upload_pipeline.rs
crates/aivpn-common/src/dpi_gate/: model.rs
crates/aivpn-common/tests/: battle_tests.rs
crates/aivpn-ios-core/: Cargo.toml
crates/aivpn-ios-core/include/: aivpn_core.h
crates/aivpn-ios-core/src/: ios_tunnel.rs  lib.rs
crates/aivpn-linux/: Cargo.toml
crates/aivpn-linux/src/: app.rs  key_storage.rs  main.rs  settings.rs  tray.rs  vpn_manager.rs
crates/aivpn-server/: Cargo.toml
crates/aivpn-server/examples/: mask_upgrade.rs  neural_calib.rs  pcap2mask.rs
crates/aivpn-server/src/: batch_io.rs  bootstrap_publish.rs  chain_forwarder.rs  client_db.rs  gateway.rs  gmm.rs  lib.rs  main.rs  management_api.rs  mask_feedback.rs  mask_gen.rs  mask_repair.rs  mask_store.rs  metrics.rs  nat.rs  neural.rs  passive_distribution.rs  pool_sync.rs  server.rs  session.rs  site_sync.rs
crates/aivpn-server/tests/: battle_tests.rs  gmm_corpus_validation.rs  management_api_tests.rs  mask_feedback_loop.rs  neural_discrimination.rs  recording_tests.rs
crates/aivpn-windows/: Cargo.toml  build.rs
crates/aivpn-windows/installer/: aivpn-installer.nsi
crates/aivpn-windows/src/: key_storage.rs  localization.rs  main.rs  tray.rs  vpn_manager.rs
deploy/config/: server.json.example
deploy/docker/: Dockerfile.client  Dockerfile.prebuilt  Dockerfile.windows-client  (+2 more)
docker/: Dockerfile.prebuilt
docs/: NEURAL_AND_GBDT.ru.md  R2_PHASE_A.md  R2_PHASE_B.md  R2_PHASE_C.md  R2_PHASE_E.md  TODO.md
ebpf/: tc_qos_prog.c
releases/: aivpn-client-arm64.apk  aivpn-client-armeabi-v7a.apk  aivpn-client.apk  aivpn-macos.dmg
scripts/: build-ios.sh  build-musl-release.sh  build-server-arm64.sh  build-server-release.sh  build-windows-gui.sh  build.sh  ci-mask-gate.sh  deploy-server-release.sh  deploy.py  setup.sh  write_neural.py
windows-installer/: BUILD.md  aivpn-installer.nsi  build-installer.ps1
(+26 files in other folders)
