[workspace]
members = [
    "aivpn-common",
    "aivpn-client",
    "aivpn-server",
    "aivpn-android-core",
    "aivpn-windows",
]
default-members = [
    "aivpn-common",
    "aivpn-client",
    "aivpn-server",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["AIVPN Team"]

[workspace.dependencies]
# Crypto
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
blake3 = "1.8"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Utils
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release.package.aivpn-android-core]
opt-level = "s"
strip = true
