[package]
name = "aivpn-android-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

# Produces a C-compatible shared library (.so) loaded by System.loadLibrary("aivpn_core").
[lib]
name = "aivpn_core"
crate-type = ["cdylib"]

[dependencies]
aivpn-common = { path = "../aivpn-common", version = "*", features = ["client-upload"] }

jni       = "0.21"
libc      = "0.2"
tokio     = { version = "1.35", features = ["rt", "net", "time", "io-util", "macros", "sync"] }
rand      = "0.8"
log       = "0.4"
android_logger = "0.14"
