[package]
name = "aivpn-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivpn-client"
path = "src/main.rs"

[features]
default = []
# Production secure mode: disables built-in bootstrap fallback
# When enabled, client will fail to start if no valid descriptors are available
production-secure = []

[dependencies]
aivpn-common = { path = "../aivpn-common", features = ["client-upload"] }

# Crypto
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
subtle.workspace = true
ed25519-dalek = "2.0"

# Async
tokio.workspace = true
tokio-util.workspace = true

# Networking - use latest tun with async support
tun = { version = "0.7", features = ["async"] }
socket2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Utils
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
portable-atomic = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
