[package]
name = "aivpn-ios-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# Produces a C-compatible static library linked into the iOS Network Extension.
[lib]
name = "aivpn_core"
crate-type = ["staticlib"]

[dependencies]
aivpn-common = { path = "../aivpn-common", features = ["client-upload"] }

libc      = "0.2"
tokio     = { version = "1.35", features = ["rt", "net", "time", "io-util", "macros", "sync"] }
rand      = "0.8"
log       = "0.4"
