[package]
name = "aivpn-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIVPN Linux GUI"
repository.workspace = true

[[bin]]
name = "aivpn-linux"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
tray-icon = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "6"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
