[package]
name = "aivpn-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "aivpn"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[build-dependencies]
winres = "0.1"
