[package]
name = "aivpn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "aivpn-client"
path = "src/main.rs"

[[bin]]
name = "aivpn-ip-helper"
path = "src/bin/aivpn-ip-helper.rs"


[features]
default = []
# Production secure mode: disables built-in bootstrap fallback
# When enabled, client will fail to start if no valid descriptors are available
production-secure = []
# R2 Phase D — client-side inline ML-DPI "reads-as-tunnel" self-gate (OFF by
# default). Samples the client's own outbound wire and requests a mask rotation
# (via the existing MaskPreference path) when its flow reads as a tunnel.
client-dpi-gate = ["aivpn-common/client-dpi-gate"]

[dependencies]
aivpn-common = { path = "../aivpn-common", version = "*", features = ["client-upload"] }

# Crypto
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
subtle.workspace = true
ed25519-dalek = "2.0"

# Async
tokio.workspace = true
tokio-util.workspace = true

# Networking - use latest tun with async support
tun = { version = "0.7", features = ["async"] }
socket2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Utils
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { version = "4.4", features = ["derive", "env"] }
base64 = "0.22"
hex = "0.4"
portable-atomic = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Userspace TCP/IP stack for proxy mode (--proxy-listen)
smoltcp = { version = "0.11", default-features = false, features = ["socket-dns", "alloc", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "winnt",
] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
# `test-util` is not part of the workspace `tokio` "full" feature set — needed
# by client.rs tests that pause/advance virtual time (e.g. to deterministically
# exercise the randomized MaskFeedback send-jitter without a real 0-3s sleep).
tokio = { workspace = true, features = ["test-util"] }
