[package]
name = "aivpn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
# Crypto
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
hmac.workspace = true
sha2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
bincode.workspace = true
serde_bytes = "0.11"

# Security
zeroize.workspace = true
subtle.workspace = true
ed25519-dalek = "2.0"

# Utils
rand.workspace = true
thiserror.workspace = true
hex = "0.4"
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true

# Async (optional — needed for upload_pipeline)
tokio = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
client-upload = ["tokio"]
