[package]
name = "aivpn-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIVPN Linux GUI"
repository.workspace = true

[[bin]]
name = "aivpn-linux"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
ksni = "0.3"
png = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "6"
libc = "0.2"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-rust = "4"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
