[package]
name = "aivpn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "aivpn-server"
path = "src/main.rs"

# Offline adversarial mask-repair operator tool (R2 Phase C).
[[bin]]
name = "aivpn-mask-repair"
path = "src/bin/aivpn-mask-repair.rs"

[dependencies]
aivpn-common = { path = "../aivpn-common", version = "*" }

# Crypto
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
ed25519-dalek = "2.0"
subtle.workspace = true
zeroize.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true

# Networking
tun = { version = "0.7", features = ["async"] }
socket2.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true
portable-atomic = "1"

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Utils
rand.workspace = true
hex = "0.4"
libc = "0.2"
flate2 = "1"
tar = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
base64 = "0.22"
clap = { version = "4.4", features = ["derive", "env"] }

# Monitoring (Phase 5)
prometheus = { version = "0.13", optional = true }

# HTTP client for passive distribution (Phase 4) and bootstrap-descriptor auto-publish
reqwest = { version = "0.11", features = ["json", "stream", "multipart"], optional = true }
# AWS SigV4 request signing for the S3-compatible bootstrap-publish channel
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
# The inline ML-DPI "reads-as-tunnel" gate now lives in aivpn-common (shared
# with the client self-gate); `neural` pulls it in from there.
neural = ["aivpn-common/dpi-gate"]
metrics = ["prometheus"]
passive-distribution = ["reqwest"]
dns = ["reqwest"]
management-api = ["axum", "tower", "hyper", "hyper-util", "tokio-stream", "anyhow"]
production-secure = []
bootstrap-publish = ["reqwest", "hmac", "sha2"]

# Management API (Unix socket HTTP server)
[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower]
version = "0.4"
features = ["util"]
optional = true

[dependencies.hyper]
version = "1"
features = ["full"]
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["tokio"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
features = ["time"]
optional = true

[dependencies.anyhow]
version = "1"
optional = true

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1.35", features = ["full"] }
