[package]
name = "aivpn-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "aivpn"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "6"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
tray-icon = "0.19"
png = "0.18"
winapi = { version = "0.3", features = [
    "winuser",
    "wincrypt",
    "dpapi",
    "winbase",
    "shellapi",
    "processthreadsapi",
    "securitybaseapi",
    "jobapi2",
    "handleapi",
    "winnt",
] }
winreg = "0.52"

